[metadata]
name = black
author = Åukasz Langa
author_email = lukasz@langa.pl
license = MIT
description = The uncompromising code formatter.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    automation
    formatter
    yapf
    autopep8
    pyfmt
    gofmt
    rustfmt
url = https://github.com/psf/black
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
py_modules = black, blackd, _version
packages = blib2to3, blib2to3.pgen2
zip_safe = False
install_requires =
    click>=6.5
    attrs>=18.1.0
    appdirs
    toml>=0.9.4
    typed-ast>=1.3.1
python_requires = >=3.6

[options.entry_points]
console_scripts =
    black=black:patched_main
    blackd=blackd:patched_main [d]

[options.extras_require]
d = aiohttp>=3.3.2; aiohttp-cors

[options.package_data]
blib2to3 = *.txt
